--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,14 @@
 {
-    "name": "eta",
-    "version": "0.0.0",
-    "dependencies": {
-        "angular": "~1.2.12",
-        "ionic": "v1.0.0-beta.3",
-        "restangular": "~1.4.0"
-    },
-    "devDependencies": {
-        "angular-mocks": "~1.2.12",
-        "angular-scenario": "~1.2.12"
-    }
+  "name": "eta",
+  "version": "0.0.0",
+  "dependencies": {
+    "angular": "~1.2.12",
+    "ionic": "v1.0.0-beta.3",
+    "restangular": "~1.4.0",
+    "angular-http-auth": "~1.2.1"
+  },
+  "devDependencies": {
+    "angular-mocks": "~1.2.12",
+    "angular-scenario": "~1.2.12"
+  }
 }
