--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "grunt-contrib-watch": "~0.5.2",
     "grunt-karma": "~0.8.0",
     "grunt-newer": "~0.6.1",
+    "grunt-ng-constant": "^0.5.0",
     "grunt-ngmin": "~0.0.2",
     "grunt-usemin": "~2.0.0",
     "jshint-stylish": "~0.1.3",
