--- a/.jshintrc
+++ b/.jshintrc
@@ -22,6 +22,7 @@
     "globals": {
         "angular": false,
         "StatusBar": false,
-        "analytics": false
+        "analytics": false,
+        "ionic": false
     }
 }
