--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
     "angular": "~1.2.12",
     "ionic": "v1.0.0-beta.3",
     "restangular": "~1.4.0",
-    "angular-http-auth": "~1.2.1"
+    "angular-http-auth": "~1.2.1",
+    "angular-moment": "~0.7.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.12",
