List contacts from contact book

--- a/.jshintrc
+++ b/.jshintrc
@@ -23,6 +23,7 @@
         "angular": false,
         "StatusBar": false,
         "analytics": false,
-        "ionic": false
+        "ionic": false,
+        "ContactFindOptions": false
     }
 }
